Done for green and blue section settings

--- a/2-step-form.html
+++ b/2-step-form.html
@@ -553,7 +553,7 @@
                                         </div>
                                     </section>
 
-                                    <div class="bp-container">
+                                    <section class="bp-container">
                                         <div class="product-bump-divider">
                                             <section
                                                 class="order-bump-container">
