--- a/MAIN.html
+++ b/MAIN.html
@@ -119,7 +119,6 @@
     .big-editor-container {
       background-color: #f5f4f8;
       /* color:blue; */
-      margin-left: 25%;  /* Adjust the margin to accommodate the sidebar width */
       padding: 20px;  /* Optional: Add some padding for spacing */
       overflow-y: auto;  /* Makes the content area scrollable if it overflows */
       /* You can define a max-height to control the scrollable area's height */
@@ -506,7 +505,7 @@
     <div class="container-fluid">
       <div class="row" style="background-color:#eee; padding-top:65px ">
         <!-- Sidebar with draggable elements -->
-        <div class="col-md-3 sidebar" id="leftSlidingPopup">
+        <div class="col-md-3 sidebar hidden" id="leftSlidingPopup">
 
           <input value type="text" name="search"
             placeholder="Search Element..."
@@ -589,7 +588,7 @@
         </div>
 
         <!-- Main content container -->
-        <div class="col-md-9 big-editor-container p-0" id="basic-container">
+        <div class="col-md-12 big-editor-container p-0" id="basic-container">
           <div id="da-main-container">
 
           </div>
@@ -1519,6 +1518,14 @@ padding: 0 6px;
   font-size: 13px;
   border-radius: 5px;
 }
+.add-element {
+  width: 100px;
+  background-color: rgb(58, 133, 255);
+  color: white;
+  border: none;
+  font-size: 13px;
+  border-radius: 5px;
+}
 .add-row-de-rollover-tools {
   position: absolute;
   top: 50%;
@@ -1956,7 +1963,7 @@ a {
 
 </style>
     <div class="row">
-      <div id="settingsSidebar" class="settingsSidebar col-12 col-md-3 p-3"
+      <div id="settingsSidebar" class="settingsSidebar p-3"
         style="background-color: #fff; margin-top: 66px; border-right: 12px solid #eee;">
         <!-- Sidebar content goes here -->
         <div class="sidebar-content">
