Fixed functionality for add elements panel

--- a/MAIN.html
+++ b/MAIN.html
@@ -505,9 +505,9 @@
     <div class="container-fluid">
       <div class="row" style="background-color:#eee; padding-top:65px ">
         <!-- Sidebar with draggable elements -->
-        <div class="col-md-3 sidebar hidden" id="leftSlidingPopup">
+        <div class="col-md-3 sidebar" id="leftSlidingPopup">
 
-          <input value type="text" name="search"
+          <input type="text" name="search"
             placeholder="Search Element..."
             class="form-control my-3 input-panel search-panel">
 
